--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -1,8 +1,8 @@
 
 ftp.server.ip=localhost
-ftp.user=mmallftp
-ftp.pass=ftppassword
-ftp.server.http.prefix=http://img.happymmall.com/
+ftp.user=cys
+ftp.pass=123456
+ftp.server.http.prefix=http://image.happymmall.com/
 
 
 alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
