--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,14 +23,15 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
-
+  <!--web容器启动和关闭的监听器-->
   <listener>
     <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
   </listener>
-
+  <!--整合springMVC和spring，加载xml-->
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+  <!--指定配置文件-->
   <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>
@@ -41,11 +42,16 @@
   <servlet>
     <servlet-name>dispatcher</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+    <!--init-param>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>/WEB-INF/XX</param-value>
+    </init-param-->
+    <!--修改dispatcher-servlet配置文件的名字-->
     <load-on-startup>1</load-on-startup>
   </servlet>
 
 
-
+  <!--springMVC拦截*.do-->
   <servlet-mapping>
     <servlet-name>dispatcher</servlet-name>
     <url-pattern>*.do</url-pattern>
