--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -7,5 +7,6 @@ ftp.server.http.prefix=http://image.happymmall.com/
 
 alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
 
+#MD5盐值，使得破解变得困难
 password.salt = geelysdafaqj23ou89ZXcj@#$@#$#@KJdjklj;D../dSF.,
 
