商品模块的开发

--- a/src/main/resources/mmall.properties
+++ b/src/main/resources/mmall.properties
@@ -2,7 +2,7 @@
 ftp.server.ip=localhost
 ftp.user=cys
 ftp.pass=123456
-ftp.server.http.prefix=http://image.happymmall.com/
+ftp.server.http.prefix=http://img.happymmall.com/
 
 
 alipay.callback.url=http://www.happymmall.com/order/alipay_callback.do
